--- a/src/Components/MyWork/MyWork.css
+++ b/src/Components/MyWork/MyWork.css
@@ -42,7 +42,7 @@
 
 .mywork-container img:hover {
   transform: scale(1.1);
-  border: 2px solid #3e66d4;
+  /* border: 2px solid #3e66d4; */
   border-radius: 10px;
   transition: 0.5s;
 }
