--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background: #161514;
-    color: white;
+    background: #1b1b1b;
+    color: rgb(255, 253, 253);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
